# cpp_python_video

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp_python_video.cpp  cpp_python_video.h
py/: .gitignore  README.md  install_pyzmq.ps1  pdm.toml  pyproject.toml
py/src/video_reader/: audio.py  opencv.py  util.py  zeromq.py  zeromq_io.py  zeromq_pair.py
py/tests/: opencv_audio.py  zeromq.py
src/: AudioInputter.cpp  AudioInputter.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  PyAPIPlugin.cpp  PyAPIPlugin.h  QZeroMQClient.cpp  QZeroMQClient.h  QZeroMQIOClient.cpp  QZeroMQIOClient.h  QZeroMQServer.cpp  QZeroMQServer.h  VideoWidget.cpp  VideoWidget.h  ZeroMQHelper.cpp  ZeroMQHelper.h  ZeroMQIOPlugin.cpp  ZeroMQIOPlugin.h  ZeroMQPairPlugin.cpp  ZeroMQPairPlugin.h  ZeroMQPlugin.cpp  ZeroMQPlugin.h  main.cpp  read_video.py
