[project]
name = "video_reader"
# version = ""
dynamic = ["version"]
description = ""
authors = [
    {name = "",email = ""},
]
dependencies = [
    "numpy>=1.25.2",
    "opencv-python>=4.8.0.76",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/video_reader/__version__.py" }
